# advent

2022/python/: day1.py
2022/rust/: Cargo.toml
2022/rust/src/: main.rs
2023/scala/: day01.scala  day02.scala  day03.scala  day04.scala  day05.scala  day06.scala  day07.scala  day08.scala  day09.scala
2024/elixir/: day01.exs  day02.exs  day03.exs  day04.exs  day05.exs
2024/elixir/advent/: mix.exs
2024/elixir/advent/lib/: day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex  day07.ex  day08.ex  day09.ex  day10.ex  day11.ex  day12.ex
2024/elixir/advent/lib/mix/tasks/: day08.ex  day09.ex  day10.ex
2024/elixir/advent/test/: advent_test.exs
2025/elixir/advent/: mix.exs
2025/elixir/advent/lib/: day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex  day07.ex  day08.ex  day09.ex  day10.ex  day11.ex  day12.ex  day12_unused.ex
2025/elixir/advent/lib/mix/tasks/: day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex  day07.ex  day11.ex  day12.ex
