[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
csv = "1.1"
ferris-says = "0.2"
itertools = "0.10.5"
serde = { version = "1", features = ["derive"] }
sscanf = "0.4.0"
